--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -128,7 +128,7 @@
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
         \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github link})}
-        \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript \& Rust, Anchor framework.}
+        \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
       \resumeItemListEnd
   
     \resumeSubheading
@@ -148,7 +148,7 @@
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
-        \resumeItem{Worked on Embedded Software for the product, on 2 processors(Vision and Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
+        \resumeItem{Worked on Embedded Software for the product, on 2 processors(Vision \& Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
         \resumeItem{Wrote the algorithms for battery management, including state-of-charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Created data visualisation dashboards in Plotly, for performance analysis and fault detection.}
         \resumeItem{Created scripts to cut, splice and watermark videos captured on the product.}
