--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -138,7 +138,7 @@
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
         \resumeItem{Created visualisation dashboards with InfluxDB/Grafana showing data from product.}
-        \resumeItem{Implemented software for datalogger, running FreeRTOS for scheduling and interfacing with several sensors.}
+        \resumeItem{Implemented software for datalogger, running FreeRTOS and interfacing with several sensors.}
         \resumeItem{Designed custom battery packs and tested their performance, especially thermal characteristics.}
         \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning}
       \resumeItemListEnd
