--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -127,7 +127,7 @@
       {Ashburton Finance}{London, UK}
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
-        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{Github link})}
+        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}})}
         \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
       \resumeItemListEnd
   
@@ -137,7 +137,7 @@
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
         \resumeItem{Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
-        \resumeItem{Created visualisation dashboards with InfluxDB/Grafana showing data from product.}
+        \resumeItem{Created visualisation dashboards with InfluxDB \& Grafana showing data from product.}
         \resumeItem{Implemented software for datalogger, running FreeRTOS and interfacing with several sensors.}
         \resumeItem{Designed custom battery packs and tested their performance, especially thermal characteristics.}
         \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning}
@@ -161,7 +161,7 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{}
-      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{launch report}).}
+      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\color{blue}{launch report}}).}
   \resumeSubHeadingListEnd
 
 
