--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -166,7 +166,7 @@
 
 
 %--------PROGRAMMING SKILLS------------
-\section{Programming Languages/Technologies}
+\section{Technologies}
  \resumeSubHeadingListStart
    \resumeSubItem{Languages: }
     {Python, C, C++, Java, Rust, Typescript}
