--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -118,7 +118,7 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Developing Bluetooth Low Energy(BLE) software for connectivity in C and Python}
+        \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock)}
         \resumeItem{Documenting system architecture and software use instructions}
       \resumeItemListEnd
@@ -127,7 +127,7 @@
       {Ashburton Finance}{London, UK}
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
-        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers(\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}})}
+        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers (\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}})}
         \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
       \resumeItemListEnd
   
@@ -136,10 +136,10 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
-        \resumeItem{Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike.}
-        \resumeItem{Created visualisation dashboards with InfluxDB \& Grafana showing data from product.}
-        \resumeItem{Implemented software for datalogger, running FreeRTOS and interfacing with several sensors.}
-        \resumeItem{Designed custom battery packs and tested their performance, especially thermal characteristics.}
+        \resumeItem{Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike}
+        \resumeItem{Created visualisation dashboards with InfluxDB \& Grafana showing data from product}
+        \resumeItem{Implemented software for datalogger, running FreeRTOS and interfacing with several sensors}
+        \resumeItem{Designed custom battery packs and tested their performance, especially thermal characteristics}
         \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning}
       \resumeItemListEnd
 
@@ -147,8 +147,8 @@
       {Onsee (formerly Pelation)}{London, UK}
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
-        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface(Django/Python).}
-        \resumeItem{Worked on Embedded Software for the product, on 2 processors(Vision \& Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
+        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python)}
+        \resumeItem{Worked on Embedded Software for the product, on 2 processors (Vision \& Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
         \resumeItem{Wrote the algorithms for battery management, including state-of-charge estimation, overvoltage/undervoltage protection, overcharge protection.}
         \resumeItem{Created data visualisation dashboards in Plotly, for performance analysis and fault detection.}
         \resumeItem{Created scripts to cut, splice and watermark videos captured on the product.}
@@ -161,7 +161,7 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{}
-      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio(LoRaWAN) to gateways worldwide(\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\color{blue}{launch report}}).}
+      {Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide (\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\color{blue}{launch report}}).}
   \resumeSubHeadingListEnd
 
 
