--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -150,6 +150,7 @@
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python)}
         \resumeItem{Worked on Embedded Software for the product, on 2 processors (Vision \& Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
         \resumeItem{Wrote the algorithms for battery management, including state-of-charge estimation, overvoltage/undervoltage protection, overcharge protection.}
+        \resumeItem{Heavily involved in design decisions and software architecture}
         \resumeItem{Created data visualisation dashboards in Plotly, for performance analysis and fault detection.}
         \resumeItem{Created scripts to cut, splice and watermark videos captured on the product.}
       \resumeItemListEnd
@@ -169,7 +170,7 @@
 \section{Technologies}
  \resumeSubHeadingListStart
    \resumeSubItem{Languages: }
-    {Python, C, C++, Java, Rust, Typescript}
+    {Python, C, C++, Java, Rust, Javascript(React)}
     \resumeSubItem{Technologies: }
       {Docker, Git, Linux}
     \resumeSubItem{Visualisation tools: }
