--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -93,7 +93,9 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{https://medadnewman.co.uk/}{\Large Medad Rufus Newman(call me Rufus)}} & Email : \href{mailto:medad@medadnewman.co.uk}{medad@medadnewman.co.uk}\\
-  \href{https://medadnewman.co.uk/}{https://medadnewman.co.uk} & Mobile : +44 7435651280 \\
+  \href{https://medadnewman.co.uk/}{medadnewman.co.uk} & Mobile : +44 7435651280 \\
+  \href{https://github.com/MedadRufus}{Github: MedadRufus } \\
+
 \end{tabular*}
 
 
