--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -120,16 +120,16 @@
       {Dyson}{Hullavington, UK}
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
-        \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python}
-        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock)}
-        \resumeItem{Documenting system architecture and software use instructions}
+        \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
+        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
+        \resumeItem{Documenting system architecture and software use instructions.}
       \resumeItemListEnd
   
     \resumeSubheading
       {Ashburton Finance}{London, UK}
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
-        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers (\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}})}
+        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers (\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}}).}
         \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
       \resumeItemListEnd
   
@@ -138,23 +138,20 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
-        \resumeItem{Created an ESP32 based datalogger logging all relevant parameters from a moving E-bike}
-        \resumeItem{Created visualisation dashboards with InfluxDB \& Grafana showing data from product}
-        \resumeItem{Implemented software for datalogger, running FreeRTOS and interfacing with several sensors}
-        \resumeItem{Designed custom battery packs and tested their performance, especially thermal characteristics}
-        \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning}
+        \resumeItem{Created an ESP32 based datalogger, running FreeRTOS, with multiple sensors.}
+        \resumeItem{Created visualisation dashboards with InfluxDB \& Grafana showing data from product.}
+        \resumeItem{Designed custom battery packs and tested their performance.}
+        \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning.}
       \resumeItemListEnd
 
     \resumeSubheading
       {Onsee (formerly Pelation)}{London, UK}
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
-        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python)}
-        \resumeItem{Worked on Embedded Software for the product, on 2 processors (Vision \& Battery management). Written in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
-        \resumeItem{Wrote the algorithms for battery management, including state-of-charge estimation, overvoltage/undervoltage protection, overcharge protection.}
-        \resumeItem{Heavily involved in design decisions and software architecture}
-        \resumeItem{Created data visualisation dashboards in Plotly, for performance analysis and fault detection.}
-        \resumeItem{Created scripts to cut, splice and watermark videos captured on the product.}
+        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
+        \resumeItem{Worked on embedded software for the product, in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
+        \resumeItem{Did data analysis with Plotly dashboards and wrote programs for automated video processing.}
+        \resumeItem{Did mechanical design work, hand assembled prototypes, printed circuit board assembly, inspection and testing.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
