--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -149,7 +149,7 @@
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
-        \resumeItem{Worked on embedded software for the product, in C and Python. Processors: Broadcom SoC \& Atmel MCU.}
+        \resumeItem{Worked in embedded software development(C \& Python), software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues to solve hardware/software issues.}
         \resumeItem{Did data analysis with Plotly dashboards and wrote programs for automated video processing.}
         \resumeItem{Did mechanical design work, hand assembled prototypes, printed circuit board assembly, inspection and testing.}
       \resumeItemListEnd
