--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -138,9 +138,8 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
-        \resumeItem{Created an ESP32 based datalogger, running FreeRTOS, with multiple sensors.}
-        \resumeItem{Created visualisation dashboards with InfluxDB \& Grafana showing data from product.}
-        \resumeItem{Designed custom battery packs and tested their performance.}
+        \resumeItem{Worked on wireless connectivity, datalogging with custom hardware/firmware (C++); Designed and built battery packs as well.}
+        \resumeItem{Created visualisation of battery performance/power consumption with InfluxDB \& Grafana for performance characterisation.}
         \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning.}
       \resumeItemListEnd
 
@@ -149,8 +148,9 @@
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
-        \resumeItem{Worked in embedded software development(C \& Python), software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues to solve hardware/software issues.}
+        \resumeItem{Worked in embedded software development (C \& Python), playing a part in software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues to solve hardware/software issues.}
         \resumeItem{Did data analysis with Plotly dashboards and wrote programs for automated video processing.}
+        \resumeItem{Carried out product testing, user interviews to get user feedback for improvements.}
         \resumeItem{Did mechanical design work, hand assembled prototypes, printed circuit board assembly, inspection and testing.}
       \resumeItemListEnd
 
