--- a/sourabh_bajaj_resume.tex
+++ b/sourabh_bajaj_resume.tex
@@ -131,6 +131,8 @@
       \resumeItemListStart
         \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers (\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}}).}
         \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
+        \resumeItem{Moved on as it did not make much business sense to pursue it further at that time.}
+
       \resumeItemListEnd
   
     \resumeSubheading
