--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -149,8 +149,10 @@
 
 \begin{center}
     {\Huge \scshape Medad Rufus Newman (call me Rufus)} \\ \vspace{1pt}
-    Chippenham,UK \\ \vspace{1pt}
-    \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44-7435651280} ~} \href{mailto:medad@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medad@medadnewman.co.uk}} ~ 
+    Chippenham, UK \\ \vspace{1pt}
+    \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44-7435651280} ~}
+    \href{mailto:medad@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medad@medadnewman.co.uk}} ~ 
+    \href{medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medadnewman.co.uk}} ~ 
     \href{https://github.com/MedadRufus}{\raisebox{-0.2\height}\faGithub\ \underline{MedadRufus}} ~
     \vspace{-8pt}
 \end{center}
@@ -160,35 +162,55 @@
 \section{EDUCATION}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Imperial College London}{9 2017 -- 7 2021}
-      {Degree Name - \textbf{Masters in Design Engineering} - \textbf{xx}}{London, UK}
+      {Imperial College London}{Sep. 2017 -- July 2021}
+      {Masters in Design Engineering, 2:1}{London, UK}
   \resumeSubHeadingListEnd
-  
+
+%-----------EXPERIENCE-----------------
+\section{Experience}
   \resumeSubHeadingListStart
+
     \resumeSubheading
-      {College Name}{MM YYYY -- MM YYYY}
-      {Exam Name - Course Name  - \textbf{Percentage} - \textbf{xx\%}}{city, country}
+      {Dyson}{Hullavington, UK}
+      {Graduate Software Engineer}{Feb 2022 - Present}
+      \resumeItemListStart
+        \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
+        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
+        \resumeItem{Documenting system architecture and software use instructions.}
+      \resumeItemListEnd
+  
+    \resumeSubheading
+      {Ashburton Finance}{London, UK}
+      {Founder}{Sep 2021 - Nov 2021}
+      \resumeItemListStart
+        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers (\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}}).}
+        \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
+        \resumeItem{Moved on as it did not make much business sense to pursue it further at that time.}
+
+      \resumeItemListEnd
+  
+    \resumeSubheading
+      {Ion-O Tech}{London, UK}
+      {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
+      \resumeItemListStart
+        \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
+        \resumeItem{Worked on wireless connectivity, datalogging with custom hardware/firmware (C++); Designed and built battery packs as well.}
+        \resumeItem{Created visualisation of battery performance/power consumption with InfluxDB \& Grafana for performance characterisation.}
+        \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning.}
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Onsee (formerly Pelation)}{London, UK}
+      {Design Engineer Intern}{May 2020 - Sep 2020}
+      \resumeItemListStart
+        \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
+        \resumeItem{Worked in embedded software development (C \& Python), playing a part in software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues to solve hardware/software issues.}
+        \resumeItem{Did data analysis with Plotly dashboards and wrote programs for automated video processing.}
+        \resumeItem{Carried out product testing, user interviews to get user feedback for improvements.}
+        \resumeItem{Did mechanical design work, hand assembled prototypes, printed circuit board assembly, inspection and testing.}
+      \resumeItemListEnd
+
   \resumeSubHeadingListEnd
-
-%------RELEVANT COURSEWORK-------
-\section{COURSEWORK / SKILLS}
-    %\resumeSubHeadingListStart
-        \begin{multicols}{4}
-            \begin{itemize}[itemsep=-2pt, parsep=5pt]
-                \item Data Structures \& Algorithms
-                \item Operating Systems
-                \item Network Security
-                \item Database Management System (DBMS)
-                \item Artificial Intelligence
-                \item OOPS Concept
-                \item Web Development
-                \item Android Development
-            \end{itemize}
-        \end{multicols}
-        \vspace*{2.0\multicolsep}
-    %\resumeSubHeadingListEnd
-
-
 
 %-----------PROJECTS-----------
 \section{PROJECTS}
@@ -249,6 +271,19 @@
  \vspace{-15pt}
 
 
+%--------PROGRAMMING SKILLS------------
+\section{Technologies}
+\resumeSubHeadingListStart
+  \resumeSubItem{Languages: }
+   {Python, C, C++, Java, Rust, Javascript(React)}
+   \resumeSubItem{Technologies: }
+     {Docker, Git, Linux}
+   \resumeSubItem{Visualisation tools: }
+     {Grafana, Seaborn, Plotly}
+   \resumeSubItem{Databases: }
+     {MongoDB, InfluxDB}
+\resumeSubHeadingListEnd
+
 %-----------INVOLVEMENT---------------
 \section{EXTRACURRICULAR}
     \resumeSubHeadingListStart
@@ -260,20 +295,5 @@
     \resumeSubHeadingListEnd
  \vspace{-11pt}
  
- %-----------CERTIFICATIONS---------------
-\section{CERTIFICATIONS}
-
-$\sbullet[.75] \hspace{0.1cm}$ {\href{certificateLink.com}{ReactJS \& Redux - Udemy}} \hspace{1.6cm}
-$\sbullet[.75] \hspace{0.1cm}$ {\href{certificateLink.com}{Java}} \hspace{2.59cm}
-$\sbullet[.75] \hspace{0.2cm}${\href{certificateLink.com} {Command Line in Linux - Coursera}}\\
-
-$\sbullet[.75] \hspace{0.2cm}${\href{certificateLink.com}{Python for Data Science - XIE}} \hspace{1cm}
-$\sbullet[.75] \hspace{0.1cm}$ {\href{certificateLink.com}{SQL}} \hspace{2.6cm}
-$\sbullet[.75] \hspace{0.2cm}${\href{certificateLink.com}{Microsoft AI Classroom - Microsoft}} \\
-
-$\sbullet[.75] \hspace{0.2cm}${\href{certificateLink.com}{\textbf{5 Stars} in \textbf{C++} \& \textbf{SQL} \href{certificateLink.com}{\raisebox{-0.1\height}\faExternalLink }}}\hspace{1.45cm}
-$\sbullet[.75] \hspace{0.2cm}${\href{certificateLink.com}{MongoDB Basics}} \hspace{0.5cm}
-$\sbullet[.75] \hspace{0.2cm}${\href{certificateLink.com}{NodeJS with Express \& MongoDB - Udemy}} \\
-
 
 \end{document}
