--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -167,7 +167,7 @@
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
-\section{Experience}
+\section{EXPERIENCE}
   \resumeSubHeadingListStart
 
     \resumeSubheading
@@ -217,83 +217,25 @@
     \vspace{-5pt}
     \resumeSubHeadingListStart
        \resumeProjectHeading
-          {\href{ProjectLink.com}{\textbf{\large{\underline{Project Name}}} \href{Project Link}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Technology Stack Used}}}{MM YYYY}
+          {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{\large{\underline{High Altitude Balloon flights}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C, LoRaWAN}}}{2018 - present}
           \resumeItemListStart
-            \resumeItem{\normalsize{About project \textbf{key points to highlight}.}}
-
-            \resumeItem{\textcolor{accent} {\href{Live Project Link} {\underline{\normalsize{Live site here}}}}}
-          \resumeItemListEnd 
-          \vspace{-13pt}
-          
-      \resumeProjectHeading
-          {\href{ProjectLink.com}{\textbf{\large{\underline{Project Name}}} \href{Project Link}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Technology Stack Used}}}{MM YYYY}
-          \resumeItemListStart
-            \resumeItem{\normalsize{About project \textbf{highlight key points}.}}
-            \resumeItem{\textcolor{accent} {\href{Project Link} {\underline{\normalsize{Download}}}}}
+            \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide.}}
           \resumeItemListEnd
-          \vspace{-13pt}
-          
-          \resumeProjectHeading
-          {\href{ProjectLink.com}{\textbf{\large{\underline{Project Name}}} \href{Project Link}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Technology Stack Used}}}{MM YYYY}
-          \resumeItemListStart
-            \resumeItem{\normalsize{About Project \textbf{highlight key points} }}
-            
-          \resumeItemListEnd 
-          
+                    
     \resumeSubHeadingListEnd
 \vspace{-12pt}
 
-%
-
-
-%-----------EXPERIENCE-----------
-\section{INTERNSHIP}
-  \resumeSubHeadingListStart
-
-    \resumeSubheading
-      {Company Name \href{certificate Link}{\raisebox{-0.1\height}\faExternalLink }}{MM YYYY -- MM YYYY} 
-      {\underline{Role Name}}{city, country}
-      \resumeItemListStart
-        \resumeItem{\normalsize{About the role \textbf{and responsibilities carried out.}}}
-  
-      \resumeItemListEnd  
-  \resumeSubHeadingListEnd
-\vspace{-12pt}
 %-----------PROGRAMMING SKILLS-----------
 \section{TECHNICAL SKILLS}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{\normalsize{Languages:}}{ \normalsize{Python, Java, C, C++, Dart, JavaScript, SQL, NoSQL, R, XML, Go}} \\
-     \textbf{\normalsize{Developer Tools:}}{ \normalsize{VS Code, Android Studio, DataGrip, Goland, Intellij Idea Ultimate}} \\
-     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Linux, GitHub, ReactJS, Redux, NextJS, NodeJS, ExpressJS, Git, Mongo, Flutter}} \\
+     \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C++, Java, Rust, Javascript(React)}} \\
+     \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB }} \\
+     \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
+     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux }} \\
     }}
  \end{itemize}
  \vspace{-15pt}
 
-
-%--------PROGRAMMING SKILLS------------
-\section{Technologies}
-\resumeSubHeadingListStart
-  \resumeSubItem{Languages: }
-   {Python, C, C++, Java, Rust, Javascript(React)}
-   \resumeSubItem{Technologies: }
-     {Docker, Git, Linux}
-   \resumeSubItem{Visualisation tools: }
-     {Grafana, Seaborn, Plotly}
-   \resumeSubItem{Databases: }
-     {MongoDB, InfluxDB}
-\resumeSubHeadingListEnd
-
-%-----------INVOLVEMENT---------------
-\section{EXTRACURRICULAR}
-    \resumeSubHeadingListStart
-        \resumeSubheading{Organization Name \href{Certificate Proof link}{\raisebox{-0.1\height}\faExternalLink } }{MM YYYY -- MM YYYY}{\underline{Role}}{Location}
-            \resumeItemListStart
-                \resumeItem{\normalsize{About the role \textbf{and responsibilities carried out.}}}
-                \resumeItem{\normalsize{Participation Certificate. \href{ParticipationCertificateLink.com}{\raisebox{-0.1\height}\faExternalLink }}}
-            \resumeItemListEnd
-    \resumeSubHeadingListEnd
- \vspace{-11pt}
- 
 
 \end{document}
