--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -177,6 +177,7 @@
         \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
         \resumeItem{Documenting system architecture and software use instructions.}
+        \resumeItem{Active in suggesting new software engineering strategies, and trying them out}
       \resumeItemListEnd
   
     \resumeSubheading
@@ -217,10 +218,18 @@
     \vspace{-5pt}
     \resumeSubHeadingListStart
        \resumeProjectHeading
-          {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{\large{\underline{High Altitude Balloon flights}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C, LoRaWAN}}}{2018 - present}
+          {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{\large{\underline{High altitude balloon flights}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C, LoRaWAN}}}{2018 - present}
           \resumeItemListStart
             \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide.}}
           \resumeItemListEnd
+
+          \vspace{-13pt}
+
+        \resumeProjectHeading
+          {\href{https://www.union.ic.ac.uk/guilds/icseds/2019/12/pulling-image-data-from-orbiting-noaa-satellites/}{\textbf{\large{\underline{Weather satellite data downlink}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2019/12/pulling-image-data-from-orbiting-noaa-satellites/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Antenna Design, SDR radios}}}{2019}
+          \resumeItemListStart
+            \resumeItem{\normalsize{Worked with a few members of the university space society to build an antenna to receive live weather images from overhead NOAA satellites. Received imagery data from satellites in multiple passes over Hyde Park, London}}
+        \resumeItemListEnd
                     
     \resumeSubHeadingListEnd
 \vspace{-12pt}
