--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -164,6 +164,9 @@
     \resumeSubheading
       {Imperial College London}{Sep. 2017 -- July 2021}
       {Masters in Design Engineering, 2:1}{London, UK}
+      \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}
+      }
+
   \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
@@ -205,7 +208,7 @@
       {Design Engineer Intern}{May 2020 - Sep 2020}
       \resumeItemListStart
         \resumeItem{Worked in a team developing a camera meant for cyclists; Worked on hardware/firmware for device and web interface (Django \& Python).}
-        \resumeItem{Worked in embedded software development (C \& Python), playing a part in software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues to solve hardware/software issues.}
+        \resumeItem{Worked in embedded software development (C \& Python), playing a part in software architecture, version control, release process management, issue tracking, software testing and collaboration with hardware engineering colleagues.}
         \resumeItem{Did data analysis with Plotly dashboards and wrote programs for automated video processing.}
         \resumeItem{Carried out product testing, user interviews to get user feedback for improvements.}
         \resumeItem{Did mechanical design work, hand assembled prototypes, printed circuit board assembly, inspection and testing.}
@@ -228,7 +231,15 @@
         \resumeProjectHeading
           {\href{https://www.union.ic.ac.uk/guilds/icseds/2019/12/pulling-image-data-from-orbiting-noaa-satellites/}{\textbf{\large{\underline{Weather satellite data downlink}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2019/12/pulling-image-data-from-orbiting-noaa-satellites/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Antenna Design, SDR radios}}}{2019}
           \resumeItemListStart
-            \resumeItem{\normalsize{Worked with a few members of the university space society to build an antenna to receive live weather images from overhead NOAA satellites. Received imagery data from satellites in multiple passes over Hyde Park, London}}
+            \resumeItem{\normalsize{Worked with members of the university space society to build an antenna to receive live weather images from overhead NOAA satellites. Received imagery data from satellites in multiple passes over Hyde Park, London.}}
+        \resumeItemListEnd
+
+        \vspace{-13pt}
+
+        \resumeProjectHeading
+          {\href{https://medadnewman.co.uk/2021/10/05/shamir-secret-sharing-scheme-2/}{\textbf{\large{\underline{Shamir Secret Sharing Scheme exploration}}} \href{https://medadnewman.co.uk/2021/10/05/shamir-secret-sharing-scheme-2/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Cryptography, Python}}}{2015}
+          \resumeItemListStart
+            \resumeItem{\normalsize{ Did a writeup on the Shamir Secret Sharing Scheme - a scheme to split a secret into \begin{math}n\end{math} shares, but requires a minimum of \begin{math}t\end{math} shares to recombine to recover the original secret. Did a Python implementation of the scheme as well.}}
         \resumeItemListEnd
                     
     \resumeSubHeadingListEnd
