--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -152,7 +152,7 @@
     Chippenham, UK \\ \vspace{1pt}
     \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44-7435651280} ~}
     \href{mailto:medad@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medad@medadnewman.co.uk}} ~ 
-    \href{medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medadnewman.co.uk}} ~ 
+    \href{medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
     \href{https://github.com/MedadRufus}{\raisebox{-0.2\height}\faGithub\ \underline{MedadRufus}} ~
     \vspace{-8pt}
 \end{center}
@@ -198,9 +198,9 @@
       {Embedded Hardware/Software Engineer Intern}{June 2021 - Sep 2021}
       \resumeItemListStart
         \resumeItem{Worked in a team to develop a high performance, innovative electric bicycle.}
-        \resumeItem{Worked on wireless connectivity, datalogging with custom hardware/firmware (C++); Designed and built battery packs as well.}
-        \resumeItem{Created visualisation of battery performance/power consumption with InfluxDB \& Grafana for performance characterisation.}
+        \resumeItem{Worked on wireless connectivity, datalogging with custom hardware/firmware (C++); Designed and built battery packs}
         \resumeItem{Developed algorithms for energy consumption prediction, using physics models and machine learning.}
+        \resumeItem{Created visualisation of battery performance/power consumption with InfluxDB \& Grafana for performance characterisation.}
       \resumeItemListEnd
 
     \resumeSubheading
