--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -151,7 +151,7 @@
     {\Huge \scshape Medad Rufus Newman (call me Rufus)} \\ \vspace{1pt}
     Chippenham, UK \\ \vspace{1pt}
     \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44-7435651280} ~}
-    \href{mailto:medad@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{medad@medadnewman.co.uk}} ~ 
+    \href{mailto:rufus@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{rufus@medadnewman.co.uk}} ~ 
     \href{medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
     \href{https://github.com/MedadRufus}{\raisebox{-0.2\height}\faGithub\ \underline{MedadRufus}} ~
     \vspace{-8pt}
