--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -150,7 +150,7 @@
 \begin{center}
     {\Huge \scshape Medad Rufus Newman (call me Rufus)} \\ \vspace{1pt}
     Chippenham, UK \\ \vspace{1pt}
-    \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44-7435651280} ~}
+    \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44 7435651280} ~}
     \href{mailto:rufus@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{rufus@medadnewman.co.uk}} ~ 
     \href{medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
     \href{https://github.com/MedadRufus}{\raisebox{-0.2\height}\faGithub\ \underline{MedadRufus}} ~
@@ -180,7 +180,7 @@
         \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
         \resumeItem{Documenting system architecture and software use instructions.}
-        \resumeItem{Active in suggesting new software engineering strategies, and trying them out}
+        \resumeItem{Active in suggesting new software engineering strategies, and trying them out.}
       \resumeItemListEnd
   
     \resumeSubheading
