--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -152,7 +152,7 @@
     Chippenham, UK \\ \vspace{1pt}
     \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44 7435651280} ~}
     \href{mailto:rufus@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{rufus@medadnewman.co.uk}} ~ 
-    \href{medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
+    \href{https://medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
     \href{https://github.com/MedadRufus}{\raisebox{-0.2\height}\faGithub\ \underline{MedadRufus}} ~
     \vspace{-8pt}
 \end{center}
@@ -239,7 +239,7 @@
         \resumeProjectHeading
           {\href{https://medadnewman.co.uk/2021/10/05/shamir-secret-sharing-scheme-2/}{\textbf{\large{\underline{Shamir Secret Sharing Scheme exploration}}} \href{https://medadnewman.co.uk/2021/10/05/shamir-secret-sharing-scheme-2/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Cryptography, Python}}}{2015}
           \resumeItemListStart
-            \resumeItem{\normalsize{ Did a writeup on the Shamir Secret Sharing Scheme - a scheme to split a secret into \begin{math}n\end{math} shares, but requires a minimum of \begin{math}t\end{math} shares to recombine to recover the original secret. Did a Python implementation of the scheme as well.}}
+            \resumeItem{\normalsize{ Did a writeup on the Shamir Secret Sharing Scheme - a scheme to split a secret into \begin{math}n\end{math} shares, but requires a minimum of \begin{math}t\end{math} shares to recombine and recover the original secret. Did a Python implementation of the scheme as well.}}
         \resumeItemListEnd
                     
     \resumeSubHeadingListEnd
