--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -164,9 +164,10 @@
     \resumeSubheading
       {Imperial College London}{London, UK}
       {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
-      \resumeItem{Learned to turn ideas into reality - everything from designing hardware to launching engaging web experiences}
-      \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}
-      }
+      \resumeItemListStart
+        \resumeItem{Learned to turn ideas into reality - everything from designing hardware to launching engaging web experiences.}
+        \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}}
+      \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
