--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -254,7 +254,7 @@
      \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C++, Java, Rust, Javascript(React)}} \\
      \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB }} \\
      \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
-     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux }} \\
+     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, Pytest, CppUTest, SciPy, NumPy, Pandas  }} \\
     }}
  \end{itemize}
  \vspace{-15pt}
