--- a/medad_rufus.tex
+++ b/medad_rufus.tex
@@ -181,8 +181,8 @@
       \resumeItemListStart
         \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
+        \resumeItem{Working with cryptography algorithms for Dyson products}
         \resumeItem{Documenting system architecture and software use instructions.}
-        \resumeItem{Active in suggesting new software engineering strategies, and trying them out.}
       \resumeItemListEnd
   
     \resumeSubheading
