--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -189,7 +189,7 @@
       {Ashburton Finance}{London, UK}
       {Founder}{Sep 2021 - Nov 2021}
       \resumeItemListStart
-        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers (\href{https://github.com/Ashburton-Finance/flash-aggregator}{\color{blue}{Github link}}).}
+        \resumeItem{Founded a venture for lending of cryptocurrencies. Concept was based around aggregating flash loans from different flash loan providers. \href{https://github.com/Ashburton-Finance/flash-aggregator}{\raisebox{-0.1\height}\faExternalLink }}
         \resumeItem{Developed product on the Solana blockchain, using Smart Contracts, Typescript, Rust and Anchor framework.}
         \resumeItem{Moved on as it did not make much business sense to pursue it further at that time.}
 
