fix weird character

--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -225,7 +225,7 @@
        \resumeProjectHeading
           {\href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\textbf{\large{\underline{High altitude balloon flights}}} \href{https://www.union.ic.ac.uk/guilds/icseds/2020/12/icspace22/}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C, LoRaWAN}}}{2018 - present}
           \resumeItemListStart
-            \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Euro­pe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide.}}
+            \resumeItem{\normalsize{Led a team to fly a small hydrogen balloon around the world on the Jet stream. Longest flight was for 22 days, flying over Japan, Canada, America and Europe. The tracker we designed was powered by solar, and transmited position fixes via radio (LoRaWAN) to gateways worldwide.}}
           \resumeItemListEnd
 
           \vspace{-13pt}
