--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -165,8 +165,8 @@
       {Imperial College London}{London, UK}
       {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
       \resumeItemListStart
-        \resumeItem{Learned to turn ideas into reality - everything from designing hardware to launching engaging web experiences.}
         \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. Using: XGBoost, Pandas, NumPy, SciPy. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}}
+        \resumeItem{Learned to turn ideas into reality - everything from designing hardware to launching engaging web experiences.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -254,7 +254,7 @@
      \textbf{\normalsize{Languages:}}{ \normalsize{Python, C, C++, Java, Rust, Javascript(React)}} \\
      \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB }} \\
      \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
-     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, Pytest, CppUTest, SciPy, NumPy, Pandas, MQTT }} \\
+     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, Pytest, CppUTest, SciPy, NumPy, Pandas, JupyterLab }} \\
     }}
  \end{itemize}
  \vspace{-15pt}
