--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -255,9 +255,11 @@
      \textbf{\normalsize{Databases:}}{\normalsize{ MongoDB, InfluxDB }} \\
      \textbf{\normalsize{Visualisation tools:}}{\normalsize{ Grafana, Seaborn, Plotly }} \\
      \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Docker, Git, Linux, Pytest, CppUTest, SciPy, NumPy, Pandas, JupyterLab }} \\
+     \textbf{\normalsize{Tooling:}}{\normalsize{ Atlassian toolset, Github, Gitlab CI/CD pipelines, Agile working}} \\
     }}
  \end{itemize}
  \vspace{-15pt}
 
+ %-----------PROGRAMMING SKILLS-----------
 
 \end{document}
