--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -149,7 +149,7 @@
 
 \begin{center}
     {\Huge \scshape Medad Rufus Newman (call me Rufus)} \\ \vspace{1pt}
-    Chippenham, UK \\ \vspace{1pt}
+    Bristol, UK \\ \vspace{1pt}
     \small \href{tel:+447435651280}{ \raisebox{-0.1\height}\faPhone\ \underline{+44 7435651280} ~}
     \href{mailto:rufus@medadnewman.co.uk}{\raisebox{-0.2\height}\faEnvelope\  \underline{rufus@medadnewman.co.uk}} ~ 
     \href{https://medadnewman.co.uk}{\raisebox{-0.2\height}\faLink\  \underline{medadnewman.co.uk}} ~ 
