--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -166,7 +166,7 @@
       {Masters in Design Engineering, 2:1}{Sep. 2017 -- July 2021}
       \resumeItemListStart
         \resumeItem{Thesis on predicting E-bike energy consumption with machine learning. Using: XGBoost, Pandas, NumPy, SciPy. {\href{https://medadnewman.co.uk/2021/10/06/e-bike-energy-consumption-prediction-with-past-data/}{\raisebox{-0.1\height}\faExternalLink }}}
-        \resumeItem{Learned to turn ideas into reality - everything from designing hardware to launching engaging web experiences.}
+        \resumeItem{Hands on experience designing hardware to launching engaging web experiences.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
