--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -180,9 +180,9 @@
       {Graduate Software Engineer}{Feb 2022 - Present}
       \resumeItemListStart
         \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
-        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
         \resumeItem{Working with cryptography algorithms for Dyson products.}
-        \resumeItem{Active in suggesting new software engineering strategies, and trying them out.}
+        \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
+        \resumeItem{Extensive testing experience, including fuzz testing code.}
       \resumeItemListEnd
   
     \resumeSubheading
