--- a/Medad_Rufus_Newman_CV.tex
+++ b/Medad_Rufus_Newman_CV.tex
@@ -182,7 +182,7 @@
         \resumeItem{Developing Bluetooth Low Energy (BLE) software for connectivity in C and Python.}
         \resumeItem{Working with cryptography algorithms for Dyson products.}
         \resumeItem{Implement embedded firmware unit testing using the Ceedling framework (Unity \& CMock).}
-        \resumeItem{Extensive testing experience, including fuzz testing.}
+        \resumeItem{Extensive automated testing experience, including fuzz testing.}
       \resumeItemListEnd
   
     \resumeSubheading
